--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "movieapp_triple1",
   "version": "1.0.0",
   "description": "",
-  
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "vue": "^2.6.12",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.5.0"
   }
